Added calculator form

--- a/session2/views/index.ejs
+++ b/session2/views/index.ejs
@@ -1,9 +1,19 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello All</title>
+	<title>Calculator</title>
 </head>
 <body>
-	<%= message %>
+	<form>
+  Num1:<br>
+  <input type="text" name="num1" value=""><br>
+  Num2:<br>
+  <input type="text" name="num2" value=""><br><br>
+  <input id = "op" type="submit" name = "op" value="sum">
+  <input id = "op" type="submit" name = "op" value="sub">
+  <input id = "op" type="submit" name = "op" value="mul">
+  <input id = "op" type="submit" name = "op" value="div">
+</form>
 </body>
-</html>>
+
+</html>
