Done with calculator

--- a/session2/views/index.ejs
+++ b/session2/views/index.ejs
@@ -4,6 +4,7 @@
 	<title>Calculator</title>
 </head>
 <body>
+   answer <%- answer %>
 	<form>
   Num1:<br>
   <input type="text" name="num1" value=""><br>
